--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 </head>
 
 <body>
+    <!--Header-->
+    <header>
+        Header
+    </header>
+
+    <!--Main content-->
+    <main>
+        Main Content
+    </main>
+
+    <!--Footer-->
+    <footer>
+        Footer
+    </footer>
 
 </body>
 
