--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta tags for search engines-->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban Running. Dublin docklands and Pheonix park">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban Running. Dublin docklands and Pheonix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
-    <!--Title-->
+    <!-- Title -->
     <title>Love Running</title>
-    <!--Favicon-->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <!--Header-->
+    <!-- Header -->
     <header>
         Header
     </header>
 
-    <!--Main content-->
+    <!-- Main content -->
     <main>
         Main Content
     </main>
 
-    <!--Footer-->
+    <!-- Footer -->
     <footer>
         Footer
     </footer>
