--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
+        <nav>
+            <ul><a href="">Home</a></ul>
+            <ul><a href="">Gallery</a></ul>
+            <ul><a href="">Sign Up</a></ul>
+        </nav>
     </header>
 
     <!-- Main content -->
