Corrected nav menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban Running. Dublin docklands and Pheonix Park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban Running. Dublin docklands and Pheonix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -25,9 +26,11 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul><a href="">Home</a></ul>
-            <ul><a href="">Gallery</a></ul>
-            <ul><a href="">Sign Up</a></ul>
+            <ul id="menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign Up</a></li>
+            </ul>
         </nav>
     </header>
 
