add font awesome and first footer link

--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
 
     <!-- Footer -->
     <footer>
-        Footer
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
     </footer>
 
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/f78bdc0f1e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
