--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Main content -->
     <main>
-        Main Content
+        <section id="hero"></section>
     </main>
 
     <!-- Footer -->
