--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 
     <!-- Main content -->
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -48,7 +53,8 @@
                     aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                    aria-label="Visit our Instagram page (opens in new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in new tab)"><i
