added basis of the form on signup page

--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,35 @@
 
     <!-- Main content -->
     <main>
-        Main Content
+        <section id="signup">
+            <h2><i class="fa-solid fa-heart-pulse"></i> Lets get you signed up!</h2>
+            <form id="signup-form" method="post" action="https://formdump.codeinstitute.net">
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" required>
+                <br>
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" required>
+                <br>
+                <label for="email_address">Email Address</label>
+                <input type="email" name="email_address" required>
+                <br>
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input id="road" type="radio" name="running_preference" required checked>
+                    </div>
+                    <div>
+                        <label for="Trail">Trail</label>
+                        <input id="trail" type="radio" name="running_preference" required>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input id="both" type="radio" name="running_preference" required>
+                    </div>
+                </div>
+                <button type="submit" class="join-button">Let's Run!</button>
+            </form>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -48,7 +76,8 @@
                     aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                    aria-label="Visit our Instagram page (opens in new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in new tab)"><i
