--- a/signup.html
+++ b/signup.html
@@ -39,29 +39,29 @@
     <!-- Main content -->
     <main>
         <section id="signup">
-            <h2><i class="fa-solid fa-heart-pulse"></i> Lets get you signed up!</h2>
-            <form id="signup-form" method="post" action="https://formdump.codeinstitute.net">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
                 <label for="first_name">First Name</label>
-                <input type="text" name="first_name" required>
+                <input type="text" name="first_name" id="first_name" class="text-input" required>
                 <br>
                 <label for="last_name">Last Name</label>
-                <input type="text" name="last_name" required>
+                <input type="text" name="last_name" id="last_name" class="text-input" required>
                 <br>
                 <label for="email_address">Email Address</label>
-                <input type="email" name="email_address" required>
+                <input type="email" name="email_address" id="email_address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
-                        <input id="road" type="radio" name="running_preference" required checked>
+                        <input type="radio" name="running_preference" id="road" value="road" required checked>
                     </div>
                     <div>
-                        <label for="Trail">Trail</label>
-                        <input id="trail" type="radio" name="running_preference" required>
+                        <label for="trail">Trail</label>
+                        <input type="radio" name="running_preference" id="trail" value="trail" required>
                     </div>
                     <div>
                         <label for="both">Both</label>
-                        <input id="both" type="radio" name="running_preference" required>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
                     </div>
                 </div>
                 <button type="submit" class="join-button">Let's Run!</button>
